Bug 344592 - sddm kcm doesn't show set Cursor Theme correctly
Summary: sddm kcm doesn't show set Cursor Theme correctly
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_sddm (other bugs)
Version First Reported In: 5.2.1
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: David Edmundson
URL:
Keywords:
: 348301 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-02-26 12:06 UTC by Lukas Schneiderbauer
Modified: 2015-09-12 11:16 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.4.2
Sentry Crash Report:


Attachments
sddm.conf (173 bytes, text/plain)
2015-02-26 12:07 UTC, Lukas Schneiderbauer
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Lukas Schneiderbauer 2015-02-26 12:06:23 UTC
In the advanced tab, the cursor theme dropdown-menu always show "KDE Classic",
although in /etc/sddm.conf "CursorTheme" is set to "breeze_cursors".

Setting the cursor theme with kcm_sddm works. Sddm also uses the breeze theme as it should.
Just in case I will attach my /etc/sddm.conf

Reproducible: Always
Comment 1 Lukas Schneiderbauer 2015-02-26 12:07:22 UTC
Created attachment 91303 [details]
sddm.conf
Comment 2 Wolfgang Bauer 2015-09-07 22:05:59 UTC
*** Bug 348301 has been marked as a duplicate of this bug. ***
Comment 3 Wolfgang Bauer 2015-09-12 11:16:29 UTC
Git commit c458a098c0271517ba59d65290d5b1b7c2577495 by Wolfgang Bauer.
Committed on 12/09/2015 at 11:14.
Pushed by wbauer into branch 'Plasma/5.4'.

Fix loading of the configured cursor theme

The cursor theme is actually stored in the "[Theme]" section, but was
loaded from "[General]".
FIXED-IN: 5.4.2
REVIEW: 125189

M  +1    -1    src/advanceconfig.cpp

http://commits.kde.org/sddm-kcm/c458a098c0271517ba59d65290d5b1b7c2577495