Fix loading of the configured cursor theme

The cursor theme is actually stored in the "[Theme]" section, but was
loaded from "[General]".

BUG: 344592
FIXED-IN: 5.4.2
REVIEW: 125189